tests/pass/run/array_append_parity/main.kira
@Main
function main() {
    var values: [Int] = []
    values.append(4)
    values.append(5)
    for item in values {
        print(item)
    }
    return
}
