tests/fail/semantics/trailing_callback_not_accepted/main.kira
function draw(value: Int) {
    print(value)
    return
}

@Main
function main() {
    draw(1) { value in
        print(value)
    }
    return
}
